--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+
     <div id="container">
       <h1 class="dodgerBlue">The Acme Home Page</h1>
 
@@ -36,11 +37,12 @@
         <h2 class="tomato">Our Favorite Colors</h2>
         <ul>
           <li>
-            <div class="color-box tomato"></div>Tomato
+            <div class="color-box tomato"></div>
+            <p>Tomato</p>
           </li>
           <li>
             <div class="color-box dodgerBlue"></div>
-            DodgerBlue
+            <p>DodgerBlue</p>
           </li>
         </ul>
       </section>
@@ -96,7 +98,7 @@
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
         </p>
-        
+
         <h3 class="blueText">Quq</h3>
         <p class="blueText">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
