made some changes to css to get even-odds selectors

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
     <div id="container">
-      <h1 class="dodgerBlue">The Acme Home Page</h1>
+      <h1 class="color-dodgerBlue">The Acme Home Page</h1>
 
       <section>
-        <h2 class="tomato">Who We Are</h2>
+        <h2 class="color-tomato">Who We Are</h2>
         <p>
           We're Acme! Lorem ipsum dolor sit amet, consectetur adipiscing elit,
           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -21,7 +20,7 @@
       </section>
 
       <section>
-        <h2 class="tomato">What We Do</h2>
+        <h2 class="color-tomato">What We Do</h2>
         <p>
           We do Acme stuff!! Lorem ipsum dolor sit amet, consectetur adipiscing
           elit, sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -34,81 +33,85 @@
       </section>
 
       <section>
-        <h2 class="tomato">Our Favorite Colors</h2>
+        <h2 class="color-tomato">Our Favorite Colors</h2>
         <ul>
           <li>
-            <div class="color-box tomato"></div>
+            <div class="box color-tomato"></div>
             <p>Tomato</p>
           </li>
           <li>
-            <div class="color-box dodgerBlue"></div>
+            <div class="box color-dodgerBlue"></div>
             <p>DodgerBlue</p>
           </li>
         </ul>
       </section>
 
       <section id="ourTeam">
-        <h2 class="tomato">Our Team</h2>
-
-        <h3 class="redText">Moe</h3>
+        <h2 class="color-tomato">Our Team</h2>
+        
+        <h3>Moe</h3>
         <div id="moe" class="teamImage"></div>
 
         <h3>Curly</h3>
         <div id="curly" class="teamImage"></div>
 
-        <h3 class="redText">Larry</h3>
+        <h3>Larry</h3>
         <div id="larry" class="teamImage"></div>
 
         <h3>Shemp Howard</h3>
         <div id="shemp" class="teamImage"></div>
       </section>
 
-      <section id="product">
-        <h2 class="tomato">Our Product</h2>
-
-        <h3 class="redText">Foo</h3>
-        <p class="redText">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <h3 class="blueText">Bar</h3>
-        <p class="blueText">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <h3 class="redText">Bazz</h3>
-        <p class="redText">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-
-        <h3 class="blueText">Quq</h3>
-        <p class="blueText">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
+      <section id="products">
+        <h2 class="color-tomato">Our Product</h2>
+        <div class="product">
+          <h3>Foo</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+        <div class="product">
+          <h3>Bar</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+        <div class="product">
+          <h3>Bazz</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+        <div class="product">
+          <h3>Quq</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
       </section>
     </div>
   </body>
