fixed styles for odd and even child elements

--- a/index.html
+++ b/index.html
@@ -46,25 +46,33 @@
         </ul>
       </section>
 
-      <section id="ourTeam">
+      <section id="our-team">
         <h2 class="color-tomato">Our Team</h2>
-        
-        <h3>Moe</h3>
-        <div id="moe" class="teamImage"></div>
 
-        <h3>Curly</h3>
-        <div id="curly" class="teamImage"></div>
+        <div class="color-font">
+          <h3>Moe</h3>
+          <div id="moe" class="team-image"></div>
+        </div>
 
-        <h3>Larry</h3>
-        <div id="larry" class="teamImage"></div>
+        <div class="color-font">
+          <h3>Curly</h3>
+          <div id="curly" class="team-image"></div>
+        </div>
 
-        <h3>Shemp Howard</h3>
-        <div id="shemp" class="teamImage"></div>
+        <div class="color-font">
+          <h3>Larry</h3>
+          <div id="larry" class="team-image"></div>
+        </div>
+
+        <div class="color-font">
+          <h3>Shemp Howard</h3>
+          <div id="shemp" class="team-image"></div>
+        </div>
       </section>
 
       <section id="products">
         <h2 class="color-tomato">Our Product</h2>
-        <div class="product">
+        <div class="color-font">
           <h3>Foo</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -76,7 +84,7 @@
             culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
-        <div class="product">
+        <div class="color-font">
           <h3>Bar</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -88,7 +96,7 @@
             culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
-        <div class="product">
+        <div class="color-font">
           <h3>Bazz</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -100,7 +108,7 @@
             culpa qui officia deserunt mollit anim id est laborum.
           </p>
         </div>
-        <div class="product">
+        <div class="color-font">
           <h3>Quq</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
